@@ -152,6 +152,7 @@ class Handler(http.server.BaseHTTPRequestHandler):
     close_connection = True
     timeout = 30
     basic_auth = None
+    require_host_header = False  # Set to True to require Host header in CONNECT requests
 
     def authorize(self):
         """Returns whether the request is authorized."""
@@ -204,6 +205,20 @@ class Handler(http.server.BaseHTTPRequestHandler):
         if len(split) != 2:
             raise _HTTPError(400, explain="Target must be host:port")
         host, port = split
+
+        # Check if Host header is present (useful for debugging libtorrent CONNECT requests)
+        host_header = self.headers.get("Host")
+        if host_header:
+            self.log_message("CONNECT request with Host header: %s (target: %s:%s)",
+                           host_header, host, port)
+        else:
+            self.log_message("CONNECT request without Host header (target: %s:%s)",
+                           host, port)
+
+        # If require_host_header is set, reject requests without Host header
+        if self.require_host_header and not host_header:
+            self.log_error("CONNECT request rejected: missing Host header")
+            raise _HTTPError(400, explain="Host header required for CONNECT requests")
 
         try:
             return socket.create_connection((host, port), self.timeout)
@@ -521,6 +536,8 @@ class Main:
         self.parser.add_argument("--basic-auth")
         self.parser.add_argument("--timeout", type=int, default=30)
         self.parser.add_argument("--bind-host", default="localhost")
+        self.parser.add_argument("--require-host-header", action="store_true",
+                               help="Require Host header in CONNECT requests")
 
         self.args = None
         self.server = None
@@ -537,6 +554,9 @@ class Main:
                 self.args.basic_auth.encode()).decode()
         else:
             Handler.basic_auth = None
+
+        Handler.timeout = self.args.timeout
+        Handler.require_host_header = self.args.require_host_header
 
         self.server = _ThreadingHTTPServer(self.address, Handler)
         self.server.serve_forever()
