@@ -116,7 +116,7 @@ EXPORT int start_web_server(bool ssl = false, bool chunked = false
 	, bool keepalive = true, int min_interval = 30);
 
 EXPORT void stop_web_server();
-EXPORT int start_proxy(int type);
+EXPORT int start_proxy(int type, bool require_host = false);
 EXPORT void stop_proxy(int port);
 EXPORT void stop_all_proxies();
 
