@@ -1,5 +1,6 @@
 2.0.12
 
+	* add option to send host header in HTTP proxy CONNECT command
 	* cache DNS failures for a shorter time
 	* file_renamed_alert is always posted, regardless of alert mask
 	* add feature to request resume data synchronously
